# dove

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.bookworm  Dockerfile.trixie  README.md  api_thread.py  config-default.toml  config-example.toml  config.py  config.toml  config_handler.py  docker-compose.amd.yml  docker-compose.intel.yml  docker-compose.keycloak.yml  docker-compose.trixie.yml  docker-compose.vaapi.yml  docker-compose.yml  elements_factory.py  entrypoint.sh  event_loop_bridge.py  helpers.py  main.py  pipeline_handler.py  pipelines.py  pyproject.toml  settings.toml
.github/workflows/: docker-publish.yml  lint.yml  pypi-publish.yml
api/: Dockerfile  api_thread.py  auth.py  caps.py  config-default.toml  config.toml  config_handler.py  configuration.py  docs.py  elements_factory.py  encoder.py  encoder_models.py  encoders.py  graphviz.py  helper.py  helpers.py  hls.py  hls_preview.py  input_models.py  input_routes.py  inputs.py  inputs_dtos.py  logger.py  main.py  mixer.py  mixers.py  mixers_dtos.py  output_models.py  output_routes.py  outputs.py  outputs_dtos.py  pipeline_handler.py  pipeline_main.py  pyproject.toml  startup.py  test-websocket.py  ui.py  webrtc_utils.py  webrtc_whep.py  webrtc_whip.py  (+3 more)
api/api/: configuration.py  dtos.py  hls.py  hls_preview.py  inputs.py  inputs_dtos.py  mixer.py  mixer_dtos.py  mixers.py  mixers_dtos.py  outputs.py  outputs_dtos.py  status_dto.py  websockets.py
api/dove/: setup.py
api/encoder/: audio_encoder.py  encoder.py  mux.py  video_encoder.py
api/inputs/: cefsrc.py  imagesrc.py  nodecg.py  playbin3.py  playlist.py  testsrc.py  uridecodebin3.py  v4l2src.py  whip.py  wpesrc.py  ytdlp.py
api/models/: input.py
api/outputs/: decklink.py  hlssink2.py  rtmpsink.py  rtspclientsink.py  shout2send.py  splitmuxsink.py  srtserversink.py  srtsink.py  whipclientsink.py
api/pipelines/: base.py  final.py  hls_monitor.py  overlay.py  test_pipeline.py
api/static/: 404.html  index.html
docs/: audio-filters.md  auth.md  config.md  debugging.md  encoders.md  index.md  inputs-nodecg.md  inputs-uridecodebin3.md  inputs.md  install.md  interface.md  outputs.md  previews.md  proxies.md  screencast.md  video-filters.md
dove/: api_thread.py  config-default.toml  config_handler.py  elements_factory.py  event_loop_bridge.py  helpers.py  logger.py  main.py  pipeline_handler.py
dove/api/: auth.py  configuration.py  docs.py  encoder_models.py  encoders.py  graphviz.py  helper.py  hls_preview.py  input_models.py  input_routes.py  mixer.py  mixers.py  mixers_dtos.py  output_models.py  output_routes.py  webrtc_utils.py  webrtc_whep.py  webrtc_whip.py  websockets.py
dove/docs/: auth.md  config.md  connection-status.md  debugging.md  encoders.md  inputs-playlist.md  inputs-testsrc.md  inputs-wpesrc.md  inputs-ytdlp.md  inputs.md  install.md  keyboard-shortcuts.md  outputs.md  previews.md  proxies.md  scenes.md
fakeapi/: Dockerfile  README.md  app copy.js  app.js  input.json  mixer.json  package-lock.json  package.json  settings.yml
frontend/: app.config.ts  dist  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
keycloak/: realm-export.json
pipelines/: audio_filters.py  base.py  core_pipeline.py  description.py  element_registry.py  helper.py  hls_monitor.py  video_filters.py
proxy/: files.py  helper.py  mediamtx.py  nodecg.py  ovenmedia.py  playlist.py  srtrelay.py
quadlet/: dove.container  dove.pod  keycloak.container  nodecg.container
static/: 200.html  404.html  index.html
(+628 files in other folders)
