[tool.poetry]
name = "dove"
version = "0.7.0"
description = "DOVE - DORFTV Online Video Editor"
authors = ["Stefan Hageneder <stefan.hageneder@dorftv.at>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dorftv/dove"
repository = "https://github.com/dorftv/dove"
packages = [
    {include = "api"},
    {include = "pipelines"},
    {include = "proxy"},
    {include = "main.py"},
    {include = "pipeline_handler.py"},
    {include = "elements_factory.py"},
    {include = "api_thread.py"},
    {include = "event_loop_bridge.py"},
    {include = "config_handler.py"},
    {include = "logger.py"},
    {include = "helpers.py"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.0"
starlette = ">=0.45.0,<1.0.0"
uvicorn = "^0.44.0"
websockets = "^16.0"
orjson = "^3.11.4"
toml = "^0.10.2"
yt-dlp = "^2026.3.3"
graphviz = "^0.21"
pydantic = "^2.12.4"
httpx = "^0.28.1"
charset-normalizer = "^3.4.4"
authlib = "^1.4.1"
joserfc = "^1.6.0"
itsdangerous = "^2.2.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
