[tool.poetry]
name = "dove-video-editor"
version = "1.0.0rc1"
description = "DOVE - Online Video Editor"
authors = ["Stefan Hageneder <stefan.hageneder@dorftv.at>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/dorftv/dove"
repository = "https://github.com/dorftv/dove"
keywords = ["gstreamer", "video", "live-streaming", "broadcast", "webrtc", "srt", "rtmp", "mixer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
packages = [{include = "dove"}]

[tool.poetry.scripts]
dove = "dove.main:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.0"
starlette = ">=0.45.0,<1.0.0"
uvicorn = "^0.44.0"
websockets = "^16.0"
orjson = "^3.11.4"
toml = "^0.10.2"
yt-dlp = "^2026.3.3"
graphviz = "^0.21"
pydantic = "^2.12.4"
httpx = "^0.28.1"
charset-normalizer = "^3.4.4"
authlib = "^1.4.1"
joserfc = "^1.6.0"
itsdangerous = "^2.2.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
